@@ -1,5 +1,9 @@
 qtgraphicaleffects-opensource-src (5.1.1-2) UNRELEASED; urgency=low
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Enable tests. Thanks Michael Terry from Ubuntu for the patch
+   (Closes: 722723).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 13 Sep 2013 17:42:08 -0300
 
 qtgraphicaleffects-opensource-src (5.1.1-1) unstable; urgency=low
